--- a/index.html
+++ b/index.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
-<html lang="pt-br"><head>
-    <title>Campo De Tiro</title>
-    <link rel="shortcut icon" href="gun1.png" type="image/x-png">
-    <script src="./lib/p5.js"></script>
-    <script src="./lib/p5.dom.min.js"></script>
-    <script src="./lib/p5.sound.min.js"></script>
-    <script src="./lib/p5.play.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8">
+<html lang="pt-br">
 
-     <!-- Sweet Alert c40-->
-     <script
-     src="https://code.jquery.com/jquery-3.5.1.min.js"
-     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-     crossorigin="anonymous"></script>
-    <script src="./lib/sweetalert.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="./lib/sweetalert.css" />
+<head>
+  <meta name="viewport" content="width=device-width,
+  user-scalable=yes, initial-scale=1, maximum-scale=1" />
+
+  <link rel="shortcut icon" href="gun1.png" type="image/x-png">
+  <title>Campo De Tiro</title>
+  <script src="./lib/p5.js"></script>
+  <script src="./lib/p5.dom.min.js"></script>
+  <script src="./lib/p5.sound.min.js"></script>
+  <script src="./lib/p5.play.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="utf-8">
+
+  <!-- Sweet Alert c40-->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="./lib/sweetalert.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="./lib/sweetalert.css" />
 
 
-  </head>
-  <body>
-      <script src="sketch.js"></script>
-  
+</head>
 
-</body></html>
+<body>
+  <script src="sketch.js"></script>
+
+
+</body>
+
+</html>
